Corrector scrollbar issue + Split products in rows
git-tfs-id: [https://tfs-fm-04.devtools.intel.com/tfs/DefaultCollection_TFS04]$/RDMS/MyDeals/MyDeals_Release/UI/main;C1438881

--- a/Intel.MyDeals/css/productselector.css
+++ b/Intel.MyDeals/css/productselector.css
@@ -255,9 +255,9 @@ a.prdAnchor {
 
 
 .prodSelector .productSuggestion .k-grid-content {
-    height: calc(85vh - 500px) !important;
-    min-height: 180px !important;
-    max-height: calc(85vh - 500px) !important;
+    height: calc(85vh - 500px);
+    min-height: 180px;
+    max-height: calc(85vh - 500px);
 }
 
 #productSuggestion.k-grid-content {
